--- a/Life/Life.csproj
+++ b/Life/Life.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5657DE21-0542-4AA4-A956-160875F8DB74}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Life</RootNamespace>
     <AssemblyName>Life</AssemblyName>
@@ -31,6 +31,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -73,14 +76,9 @@
     <Compile Include="Game.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="GameConsole\Game1Console.cs" />
-    <Compile Include="GameConsole\Game2Console.cs" />
-    <Compile Include="GameConsole\Game3Console.cs" />
-    <Compile Include="GameConsole\Game4Console.cs" />
     <Compile Include="Gaming\Game4.cs" />
     <Compile Include="Gaming\GameBase.cs" />
     <Compile Include="Initialization\GenerateRandom.cs" />
-    <Compile Include="Initialization\Init.cs" />
     <Compile Include="Initialization\Options.cs" />
     <Compile Include="Interface\ILiving.cs" />
     <Compile Include="LivingProperty\Grass1Property.cs" />
@@ -94,16 +92,13 @@
     <Compile Include="Living\LivingBase.cs" />
     <Compile Include="Living\Grass\LivingBaseGrass.cs" />
     <Compile Include="Living\Grass\Life\LivingBaseGrassLife.cs" />
-    <Compile Include="Menu.cs" />
     <Compile Include="Models\Cell.cs" />
     <Compile Include="Gaming\Game1.cs" />
     <Compile Include="Gaming\Game2.cs" />
     <Compile Include="Gaming\Game3.cs" />
-    <Compile Include="GameConsole\GameBaseConsole.cs" />
     <Compile Include="MSreplication_options.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="spt_fallback_db.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
